make sure left side bar is visible

--- a/phoenicis-javafx/src/main/resources/org/phoenicis/javafx/themes/default/main.css
+++ b/phoenicis-javafx/src/main/resources/org/phoenicis/javafx/themes/default/main.css
@@ -103,6 +103,7 @@
 .leftPaneScrollbar {
     -fx-border-width: 0;
     -fx-background-color:#F0F0F0;
+    -fx-min-width: 15em;
 }
 
 .leftPaneScrollbar > .viewport {
